--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,14 @@
 <ion-content>
+    <button (click)="allTogetherNow()" ion-button primary>yeee</button>
+    <button (click)="predict()" ion-button primary>booooy</button>
+    <h1>{{ results }}</h1>
 
-  <ion-fab right top small>
-    <button (click)="takePicture()" ion-fab color="light"><ion-icon name="videocam"></ion-icon></button>
+<!--   <ion-fab right top small>
+    <button (click)="testStarter()" ion-fab color="light"><ion-icon name="videocam"></ion-icon></button>
   </ion-fab>
 
   <ion-fab left top small>
-    <button (click)="openModal()" ion-fab color="light"><ion-icon name="exit"></ion-icon></button>
-  </ion-fab>
+    <button (click)="testStopper()" ion-fab color="light"><ion-icon name="exit"></ion-icon></button>
+  </ion-fab> -->
 
 </ion-content>
