--- a/src/pages/pic-modal/pic-modal.html
+++ b/src/pages/pic-modal/pic-modal.html
@@ -17,5 +17,5 @@
 
 
 <ion-content padding>
-  <img src="{{picture}}" />
+  <img src="https://www.flickr.com/photos/xxiamazombiexx/5350919883/in/photolist-99QS4n-98GWBk-7gaakt-7jHz6H-axEtKE-ahRPv5-fGqPTX-6vSDDj-bD1y4n-a5b1iL-5BNwcn-ahQMAE-7KG4y9-5BSYGU-7V49to-98GWGv-5Mfy9y-bSSgvK-axEtEQ-dQJMJ9-5MjsvK-gAcweh-5Rmr4M-7ZhrGo-5PE1h6-ayLvpe-dQJGsY-a54jYg-6JBhKS-7sTyRa-aaKHtq-dQJDgW-dQJXws-5nADZf-bPBi2Z-efG3Zb-djcnpi-5ZM85c-a5HEeU-dQDgu6-dQK1hW-dQJHFG-5MoDLL-5zd4EH-98GWyr-83GWUU-7eChFY-afXNwn-5Rmr5B-dQJYSC" />
 </ion-content>
