--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-content>
     <button (click)="allTogetherNow()" ion-button primary>yeee</button>
-    <button (click)="predict()" ion-button primary>booooy</button>
+    <button (click)="takePicture()" ion-button primary>booooy</button>
     <h1>{{ results }}</h1>
 
 <!--   <ion-fab right top small>
