--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <button (click)="allTogetherNow()" ion-button primary>yeee</button>
+    <button (click)="letsSeeIt()" ion-button primary>yeee</button>
     <button (click)="takePicture()" ion-button primary>booooy</button>
     <h1>{{ results }}</h1>
 
