--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-content>
     <button (click)="letsSeeIt()" ion-button primary>yeee</button>
-    <button (click)="startReader()" ion-button primary>booooy</button>
+    <button (click)="takePicture()" ion-button primary>booooy</button>
     <button (click)="stopReader()" ion-button primary>!</button>
     <h1>{{ results }}</h1>
     <img src="{{ this.picture }}" height="120px" width="80px">
