--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,9 @@
 <ion-content>
-    <button (click)="letsSeeIt()" ion-button primary>yeee</button>
-    <button (click)="predict()" ion-button primary>booooy</button>
+    <button (click)="startReader()" ion-button primary>booooy</button>
     <button (click)="stopReader()" ion-button primary>!</button>
-    <h1>{{ results }}</h1>
-    <img src="{{ this.picture }}" height="120px" width="80px">
-
+    <li *ngFor="let res of results"> 
+        {{ res }}
+    </li>    
 <!--   <ion-fab right top small>
     <button (click)="testStarter()" ion-fab color="light"><ion-icon name="videocam"></ion-icon></button>
   </ion-fab>
