for loop painstakenly

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,5 @@
 <ion-content>
-    <button (click)="startReader()" ion-button primary>booooy</button>
-    <button (click)="stopReader()" ion-button primary>!</button>
+    <button (click)="startPictures()" ion-button primary>booooy</button>
     <li *ngFor="let res of results"> 
         {{ res }}
     </li>    
