--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,3 @@
 <ion-content>
-    <button (click)="startPictures()" ion-button primary>booooy</button>
-    <li *ngFor="let res of results"> 
-        {{ res }}
-    </li>    
-<!--   <ion-fab right top small>
-    <button (click)="testStarter()" ion-fab color="light"><ion-icon name="videocam"></ion-icon></button>
-  </ion-fab>
-
-  <ion-fab left top small>
-    <button (click)="testStopper()" ion-fab color="light"><ion-icon name="exit"></ion-icon></button>
-  </ion-fab> -->
-
+    <button (click)="openCamera()" ion-button secondary >im rick james</button>
 </ion-content>
