--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -1,4 +1,5 @@
 <ion-content>
+    <button (click)="switchCamera()" ion-button secondary>Yeahhhhh</button>
     <button (click)="startPictures()" ion-button primary>booooy</button>
     <li *ngFor="let res of results"> 
         {{ res }}
