--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -1,9 +1,20 @@
 <ion-content>
     <button (click)="switchCamera()" ion-button secondary>Yeahhhhh</button>
     <button (click)="startPictures()" ion-button primary>booooy</button>
-    <li *ngFor="let res of results"> 
-        {{ res }}
-    </li>    
+
+    <ion-card>
+      <ion-card-header>
+        Headass
+      </ion-card-header>
+      <ion-card-content>
+          hEadass           
+          hEadass 
+          hEadass 
+          hEadass 
+          hEadass 
+          hEadass 
+      </ion-card-content>
+    </ion-card>
 <!--   <ion-fab right top small>
     <button (click)="testStarter()" ion-fab color="light"><ion-icon name="videocam"></ion-icon></button>
   </ion-fab>
