--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -1,6 +1,7 @@
 <ion-content>
     <h1>{{ results }}</h1>
     <h1>{{ resultsVal }}</h1>
+    <h1>{{ hit }}</h1>
 
     <button ion-button primary (click)="takePicture()"></button>
 
