--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -82,7 +82,7 @@
 </svg> -->
 
 <!-- Easy mode -->
-<div class="bounce-anim">
+<div [ngClass]="anim ? 'bounce-anim' : 'no-anim'">
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 484.8 484.8" style="enable-background:new 0 0 484.8 484.8;" xml:space="preserve" width="512px" height="512px" class=""><g><path style="fill:#22D62C" d="M143.2,160c-0.8,0-0.8,0-1.6,0c-38.4-2.4-73.6-42.4-79.2-89.6c-1.6-15.2,0-28.8,4-40.8  C49.6,41.6,36,60,30.4,82.4c-12,44.8,8.8,88.8,46.4,99.2C100.8,187.2,125.6,178.4,143.2,160z" data-original="#ED1841" class="" data-old_color="#1FBC28"/><path style="fill:#0F6602" d="M341.6,160c0.8,0,0.8,0,1.6,0c38.4-2.4,73.6-42.4,79.2-89.6c1.6-15.2,0-28.8-4-40.8  c16.8,11.2,30.4,29.6,36,52.8c12,44.8-9.6,88.8-47.2,98.4C384,187.2,359.2,178.4,341.6,160z" data-original="#C1053A" class="" data-old_color="#136B06"/><g>
       <path style="fill:#22D62C" d="M484.8,286.4c0,104-95.2,188-242.4,188S0,390.4,0,286.4s95.2-260,242.4-260S484.8,182.4,484.8,286.4   z" data-original="#ED1841" class="" data-old_color="#1FBC28"/>
       <path style="fill:#22D62C" d="M484.8,286.4c0,104-95.2,156-242.4,156S0,390.4,0,286.4s95.2-276,242.4-276S484.8,182.4,484.8,286.4   z" data-original="#ED1841" class="" data-old_color="#1FBC28"/>
