--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-content no-padding no-margin>
     <div class="center">
         <div class="wrapper">
-            <h1>Read My Handsdsa<span>|</span></h1>
+            <h1>Read My Hand<span>|</span></h1>
         </div>
         <button no-padding class="fill" (click)="openCamera()"><i class="fas fa-microphone"></i></button>
         <div class="desc">Get started!</div>
